2005-10-22  Aaron Bockover  <aaron@aaronbock.net>

	* src/AudioCdCore.cs: Removed CDDB implementation, implemented MusicBrainz
	CD TOC reading and Metadata Lookup, refactored and cleaned up a lot in here

2005-10-21  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Generate src/MusicBrainz/MusicBrainz.dll.config, and 
	src/MusicBrainz/Makefile
	* src/Makefile.am: Add MusicBrainz to SUBDIRS, link against MusicBrainz.dll
	* src/MusicBrainz/Makefile.am: Build/install MusicBrainz.dll
	* src/MusicBrainz/MusicBrainz.dll.config.in: DLL Mappings to libmusicbrainz
	* src/MusicBrainz/Client.cs: MusicBrainz C# bindings to the MusicBrainz 
	client
	* src/MusicBrainz/ClientVersion.cs: Class representing MusicBrainz client
	version information
	* src/MusicBrainz/Rdf.cs: RDF Strings for the MusicBrainz client
	* src/MusicBrainz/SimpleDisc.cs: Basic class to handle reading CD 
	and querying MB
	* src/MusicBrainz/SimpleTrack.cs: A class representing a track on a CD
	* src/MusicBrainz/SimpleDiscTest.cs: A simple console test program 
	to read a CD

	* mediaengines/vlc/Makefile.am: fixed whitespace after trailing \
	* data/banshee.desktop.in.in: Make the desktop file show up in 
	Ximian/Novell/RedHat menus
	* configure.ac: Output hal-sharp/hal-sharp.dll.config
	* src/StockIcons.cs: use StockItem to initalize stock icons with i18n 
	descriptions, add items to Gtk.StockManager

2005-10-21  Rodney Dawes  <dobey@novell.com>

	* data/images/Makefile.am: Install the 16px and 22px versions into the
	16x16 and 22x22 hicolor directories, not the 24px icon

2005-10-21  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: require mono 1.1.9
	* hal-sharp/Makefile.am: Install hal-sharp.dll.config, 
	not hal-sharp.dll.config.in

2005-10-21  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Require gtk-sharp 2.3.91 and ipod-sharp 0.5.8

	* Makefile.am: Updated DISTCLEANFILES/CLEANFILES
	* configure.ac: Removed data/banshee.desktop.in
