@@ -1,5 +1,6 @@
 2005-10-22  Aaron Bockover  <aaron@aaronbock.net>
 
+	* src/MusicBrainz/SimpleDisc.cs: Add an indexer for looking up tracks
 	* src/AudioCdCore.cs: Removed CDDB implementation, implemented MusicBrainz
 	CD TOC reading and Metadata Lookup, refactored and cleaned up a lot in here
 
